tests/errors/syntax/no_indentifier_after_inferred_type_symbol.odl
main :: () -> void {
    add :: (a: !then, b: int) -> int {